# docs/greenlight/swagger.json
@@ -59,7 +59,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.createMovieHandler.input"
+                            "$ref": "#/definitions/data.MovieCreation"
                         }
                     }
                 ],
@@ -102,6 +102,44 @@
                         }
                     }
                 }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Movie"
+                ],
+                "summary": "Show an a movie",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Movie Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Movie creation dto",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/data.MovieCreation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/data.Movie"
+                        }
+                    }
+                }
             }
         }
     },
@@ -133,8 +171,7 @@
                     "type": "integer"
                 },
                 "runtime": {
-                    "type": "string",
-                    "example": "180 mins"
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
@@ -147,7 +184,7 @@
                 }
             }
         },
-        "main.createMovieHandler.input": {
+        "data.MovieCreation": {
             "type": "object",
             "properties": {
                 "genres": {
